# DeckBridge

./: .gitignore  .oxfmtrc.json  ARCHITECTURE.md  README-DISTRIBUTION.md  README.md  lefthook.yml  mise.toml  typos.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: _CONTRACT.md  adding-a-device.md  features.md  getting-started.md  headless-linux.md  hidapi-ffi.md  image-flow.md  introduction.md  plugin-widgets.md  privacy.md  protocol-explainer.html  references.md  side-keys.md
docs-analytics/: README.md  dashboard.html  deno.json  main.ts  main_test.ts
docs-site/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/plugins/: remark-mermaid-prerender.mjs
docs-site/src/: analytics.ts  animPref.ts  useAnimationsDisabled.ts
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx  protocol-explainer.mdx
docs-site/src/pages/_home/: BridgeMark.tsx  Comparison.tsx  Flow.tsx  Quickstart.tsx  RotatingWord.tsx  content.tsx  features.tsx
docs-site/src/theme/: Root.tsx
examples/plugins/: countdown.js  hello.js  home-assistant.js  worldclock.js
packaging/homebrew/: README.md  deckbridge.rb
packaging/linux/: 99-deckbridge.rules  deckbridge.service  install.sh
packaging/scoop/: README.md  deckbridge.json
patches/: txiki-slim.patch
rust/: Cargo.toml  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
rust/deckbridge-native/: Cargo.toml  README.md
rust/deckbridge-native/src/: bmp.rs  hid.rs  jpeg.rs  lib.rs  mdns_windows.rs  pad.rs  transform.rs  util.rs
rust/deckbridge-tray/: Cargo.toml  README.md
rust/deckbridge-tray/src/: main.rs
rust/jpeg-encoder/: Cargo.toml  README.md
rust/jpeg-encoder/src/: encoder.rs
scripts/: LICENSE-hidapi.txt  build-deckbridge-native.mjs  compile.mjs  e2e-smoke.sh  gen-font-atlas.mjs  package.mjs  probe-serials.sh  run-tests.mjs  tauri-build.mjs  tjs-build.mjs  tjs-download.mjs  tjs-setup.mjs
src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.macos.conf.json
src-tauri/binaries/: .gitignore  README.md
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/src/: lib.rs  main.rs
ts/: .oxlintrc.json  build.mjs  eslint.config.mjs  knip.json  package-lock.json  package.json  tsconfig.json
ts/scripts/: coverage-report.mjs  gen-splash.mjs
ts/src/: app.ts  capabilities.ts  cli-devices.ts  cli.ts  comm-format.ts  cora-describe.ts  cora-frame.ts  cora-server-base.ts  cora-startup.ts  device-identity.ts  device-session.ts  driver-manager-extras.ts  driver-manager-primary.ts  driver-manager.ts  elgato-child-payload.ts  elgato-child-report-handlers.ts  elgato-child-server.ts  elgato-server.ts  elgato-types.ts  elgato.ts  extra-keys.ts  feature-response.ts  globals.d.ts  hid-worker-host.ts  hid-worker-protocol.ts  hid-worker.ts  image-assembler.ts  image-cache.ts  image-pipeline.ts  image-render.ts  k1pro-probe.ts  logger.ts  mdns-advertiser.ts  mirabox-smoke.ts  mirabox.ts  native-libs.ts  os-utils.ts  plugin-host.ts  plugin-worker-protocol.ts  plugin-worker.ts  (+6 more)
ts/src/assets/: font-atlas.ts  splash-states.ts
ts/src/devices/: driver.ts  hid-connection.ts  hid-driver-base.ts  mirabox-protocol.ts  mock.ts  registry.ts
ts/src/ffi/: hidapi.ts  image-proc.ts  mdns.ts
ts/src/platform/: buffer-shim.ts  events-shim.ts  tcp.ts
ts/test/: assembler.test.ts  buffer-shim.test.ts  cli-devices.test.ts  cli.test.ts  cora-frame.test.ts  device-identity.test.ts  device-models.test.ts  device-session.test.ts  driver-manager.test.ts  elgato-child-image-bounds.test.ts  extra-keys.test.ts  feature-response.test.ts  ffi-mdns.test.ts  hash-bench.test.ts  hid-worker-host.test.ts  image-cache.test.ts  image-pipeline.test.ts  image-render.test.ts  k1pro-chunk-pad.test.ts  k1pro-probe-layout.test.ts  key-preview.test.ts  mdns-advertiser.test.ts  mirabox-parse.test.ts  native-libs.test.ts  packets.test.ts  pairing.test.ts  plugin-host.test.ts  server.test.ts  settings-store.test.ts  splash-size.test.ts  translator.test.ts  tray.test.ts  ui-helpers-docks.test.ts  web-ui-server.test.ts
ts/test/helpers/: cora-framer.ts
(+60 files in other folders)
